# MyPrivatePractice

./: .gitignore  CMakeLists.txt  Main.c  ProjectJni.c  README.md  gradle.properties  main.cpp  pom.xml  settings.gradle.kts
AppartmentsQuestion/: Appartment.cpp  Appartment.h  GardenApp.cpp  GardenApp.h  Luxary.cpp  Luxary.h  Penthouse.cpp  Penthouse.h
BinNode/: BinNode.c  BinNode.h
Buffer/: Buffer.cpp  Buffer.h  BufferAuto.cpp  BufferAuto.h
CharList/: CharList.cpp  CharList.h  UCharList.cpp  UCharList.h
ClownyPy/: Clown.cpp  Clown.h  Pyramid.cpp  Pyramid.h
DoublyLinkedList/: List.h
Driver/: DepartmentOfTransportation.cpp  DepartmentofTransportation.h  Driver.cpp  Driver.h  DriversDb.cpp  DriversDb.h
Employees/: AllEmployees.cpp  AllEmployees.h  Doctor.cpp  Doctor.h  Employee.cpp  Employee.h  Nurse .cpp  Nurse .h  Nurse.cpp  Supervisor.cpp  Supervisor.h
Entry/: Entry.c  Entry.h
ForwardLinkedList/: ForwardList .h
Main/: main.cpp
Memory Pool/: Box.cpp  Box.h
Node/: Node.c  Node.h
PointersMaster/: Animal.c  Animal.h
Question10/: GradesFile.cpp  GradesFile.h  Student.cpp  Student.h
Question11/: Student.cpp  Student.h  StudentsData.cpp  StudentsData.h
Question8/: SpeedCamera.cpp  SpeedCamera.h  SpeedCameraNetwork.cpp  SpeedCameraNetwork.h
Queue/: PriorityQueue.h  Queue.c  Queue.h
Reminder/: DailyReminder.cpp  DailyReminder.h  Reminder.cpp  Reminder.h  WeeklyReminder.cpp  WeeklyReminder.h
RestaurantQ/: Client.cpp  Client.h  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h
SetOfNumbers/: SetOfNumbers.cpp  SetOfNumbers.h
Seven/: Data.cpp  Data.h  Memory.h  (+1 more)
(+228 files in other folders)
